fix modal scrollbar

--- a/src/components/blocks/AnketaPopUp/style.styl
+++ b/src/components/blocks/AnketaPopUp/style.styl
@@ -9,6 +9,9 @@
 	height 100%
 	max-height 100% !important
 	margin 0
+	&__content
+		.v-dialog
+			margin 0;
 	.medform
 		background: #FFFFFF;
 		box-shadow: 0px 40px 120px rgba(19, 24, 31, 0.15);
